--- a/README
+++ b/README
@@ -1,14 +1,21 @@
-Sicilian
-
-                            apertium-scn
+Sicilian (`apertium-scn`)
 ===============================================================================
 
 This is an Apertium monolingual language package for Sicilian. What
 you can use this language package for:
 
 * Morphological analysis of Sicilian
-* Morphological generation of Sicilian
 * Part-of-speech tagging of Sicilian
+
+Orthographical note
+===============================================================================
+
+This analyser is built to analyse Sicilian words, it does not currently
+follow any prescribed orthography and contains a great deal of orthographic
+variation, both in forms and in lemmas. 
+
+Adopting a standard orthographic form for lemmas is in the roadmap for 
+development of the analyser.
 
 Requirements
 ===============================================================================
@@ -25,10 +32,10 @@ Compiling
 ===============================================================================
 
 Given the requirements being installed, you should be able to just run:
-
+```
 $ ./configure
 $ make
-
+```
 You can use ./autogen.sh instead of ./configure if you're compiling
 from SVN.
 
@@ -37,9 +44,9 @@ can use it directly from this directory.
 
 If you are installing this language package as a prerequisite for an
 Apertium translation pair, then do (typically as root / with sudo):
-
+```
 # make install
-
+```
 You can give a --prefix to ./configure to install as a non-root user,
 but make sure to use the same prefix when installing the translation
 pair and any other language packages.
@@ -49,21 +56,24 @@ Testing
 
 If you are in the source directory after running make, the following
 commands should work:
-
+```
 $  echo "TODO: test sentence" | apertium -d . scn-morph
 TODO: test analysis result
+```
 
+```
 $ echo "TODO: test sentence" | apertium -d . scn-tagger
 TODO: test tagger result
+```
 
 Files and data
 ===============================================================================
 
-* apertium-scn.scn.dix            - Monolingual dictionary
-* scn.prob                        - Tagger model
-* apertium-scn.scn.rlx            - Constraint Grammar disambiguation rules
-* apertium-scn.post-scn.dix       - Post-generator
-* modes.xml                       - Translation modes
+* `apertium-scn.scn.dix`            - Monolingual dictionary
+* `scn.prob`                        - Tagger model
+* `apertium-scn.scn.rlx`            - Constraint Grammar disambiguation rules
+* `apertium-scn.post-scn.dix`       - Post-generator
+* `modes.xml`                       - Translation modes
 
 For more information
 ===============================================================================
@@ -78,7 +88,7 @@ Help and support
 If you need help using this language pair or data, you can contact:
 
 * Mailing list: apertium-stuff@lists.sourceforge.net
-* IRC: #apertium on irc.freenode.net
+* IRC: `#apertium` on `irc.freenode.net`
 
 See also the file AUTHORS included in this distribution.
 
